# Brain_Tumor_Benchmark

./: .gitignore  README.md  main.py  pyproject.toml  run_all.sh
configs/: base.yaml  unet3d.yaml  unetr.yaml
data/: __init__.py  augmentation.py  dataset.py  deduplication.py  preprocessing.py  splits.py
evaluation/: __init__.py  evaluator.py  report.py
models/: __init__.py  adapters.py  param_counter.py  unet3d.py  unetr.py
scripts/: benchmark.py  train_unet3d.py  train_unetr.py  verify_deduplicate.py
tests/: test_forward_pass.py
tracking/: __init__.py  mlflow_logger.py
training/: __init__.py  early_stopping.py  losses.py  metrics.py  trainer.py  vram_profiler.py
