[project]
name = "brain-tumor-benchmark"
version = "0.1.0"
description = "3D Brain Tumor Segmentation: U-Net vs UNETR benchmark"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "monai[all]>=1.3.0",
    "nibabel>=5.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.11.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "SimpleITK>=2.3.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
